# prompt-optimizer

./: .gitignore  LICENSE  README.md  start.bat
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/prompt_optimizer/: __init__.py  paths.py  services.py
backend/src/prompt_optimizer/api/: __init__.py  app.py
backend/src/prompt_optimizer/cli/: __init__.py  __main__.py  app.py
backend/src/prompt_optimizer/core/: __init__.py  analyzer.py  diff.py  models.py  optimizer.py  rules.py  scoring.py  suggestions.py
backend/src/prompt_optimizer/export/: __init__.py  service.py
backend/src/prompt_optimizer/storage/: __init__.py  service.py  version_service.py
backend/src/prompt_optimizer/templates/: __init__.py  manager.py
backend/tests/: test_api.py  test_core.py  test_data_files.py  test_storage_export.py
data/rules/: scoring.yml
data/templates/: business.yml  creative.yml  education.yml  general.yml  technical.yml
docs/: architecture.md  coding-style.md  contribution.md  development-plan.md  prompt-rules.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/tests/: App.test.tsx
