[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-optimizer"
version = "0.1.0"
description = "离线优先的提示词分析、优化、模板管理与版本对比工具"
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Prompt Optimizer Contributors" }]
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.2",
    "rich>=13.7.0",
    "typer>=0.12.3",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
prompt-opt = "prompt_optimizer.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_optimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["prompt_optimizer"]
